<resources>
    <string name="app_name">CHICHANG</string>
    <string name="appTitle">Time to CHICHANG</string>
    <string name="categoryName">Check Category</string>

    <string name="nav_setup">Setup</string>
    <string name="nav_graph">Graph</string>
    <string name="nav_home">Home</string>
    <string name="label_top">December</string>
    <string name="label_middle">1</string>
    <string name="select_date">Select Date</string>

    <string name="expense">EXPENSE</string>
    <string name="income">INCOME</string>
    <string name="total">TOTAL</string>
    <string name="loginbtn">Login</string>
    <string name="loginreg">Register</string>
    <string name="prompt_password">Password</string>
    <string name="have_a_acc">Already have an account?</string>
    <string name="passvali">Password again</string>
    <string name="prompt_email">Email</string>

    <string name="IE">Income or expense:</string>
    <string name="type">Type:</string>
    <string name="Item_name">Item name:</string>
    <string name="amount">Amount:</string>
    <string name="back">Back</string>
    <string name="Add">Add</string>
    <string name="Add_income">Add new income</string>
    <string name="Add_expense">Add new expense</string>
    <string name="enterHere">Enter here</string>
    <string name="just_a_blank" />
    <string name="updatepost">Update Post</string>
    <string name="deletepost">Delete Post</string>
    <string name="date">Date:</string>

    <string name="title_message">Select Category</string>
    <string name="food">Food</string>
    <string name="clothing">Clothing</string>
    <string name="housing">Housing</string>
    <string name="transportation">Transportation</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>
    <string name="save">SAVE</string>

    <string name="salary">Salary</string>
    <string name="allowance">Allowance</string>
    <string name="award_bonus">Award or Bonus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
